--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,14 +8,22 @@
 <body>
 <div class="login-container">
     <h1>Đăng nhập</h1>
-    <form action="" method="post" th:object="${user}">
+
+    <div th:if="${param.error}">
+        <p style="color: red;">Tên đăng nhập hoặc mật khẩu không đúng</p>
+    </div>
+    <div th:if="${param.logout}">
+        <p style="color: green;">Bạn đã đăng xuất thành công</p>
+    </div>
+
+    <form action="/login" method="post">
         <div>
             <label for="username">Tên đăng nhập</label>
-            <input type="text" th:field="*{userName}" id="username" />
+            <input type="text" id="username" name="username" />
         </div>
         <div>
             <label for="password">Mật khẩu</label>
-            <input type="password" th:field="*{password}" id="password" />
+            <input type="password" id="password" name="password" />
         </div>
         <button type="submit">Đăng nhập</button>
     </form>
