--- a/src/main/resources/static/css/Index.css
+++ b/src/main/resources/static/css/Index.css
@@ -395,6 +395,7 @@ tbody tr:hover {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(2px);
+    overflow-y: auto;
 }
 
 .modal-content {
@@ -438,7 +439,8 @@ tbody tr:hover {
 }
 
 .modal-content input,
-.modal-content select {
+.modal-content select,
+.modal-content textarea {
     width: 100%;
     padding: 0.8rem;
     border-radius: 6px;
