--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -42,25 +42,26 @@
                 <div class="stat-group">
                     <h3>Thống kê khóa học</h3>
                     <p>Tổng số khóa học: <strong th:text="${countCourse}">0</strong></p>
-                    <p>Đang hoạt động: <strong th:text="${courseActive}">10</strong></p>
-                    <p>Đã kết thúc: <strong th:text="${courseEnded}">4</strong></p>
+                    <p>Đang hoạt động: <strong th:text="${courseActive}">0</strong></p>
+                    <p>Đã kết thúc: <strong th:text="${courseEnded}">0</strong></p>
                 </div>
 
                 <div class="stat-group">
                     <h3>Thống kê lớp học</h3>
-                    <p>Tổng số lớp: <strong th:text="${countClass}">20</strong></p>
-                    <p>Đang hoạt động: <strong th:text="${classActive}">10</strong></p>
-                    <p>Đã kết thúc: <strong th:text="${classCompleted}">4</strong></p>
-                    <p>Đang chờ: <strong th:text="${classWaiting}">6</strong></p>
+                    <p>Tổng số lớp: <strong th:text="${countClass}">0</strong></p>
+                    <p>Đang hoạt động: <strong th:text="${classActive}">0</strong></p>
+                    <p>Đã kết thúc: <strong th:text="${classCompleted}">0</strong></p>
+                    <p>Đang chờ: <strong th:text="${classWaiting}">0</strong></p>
                 </div>
 
                 <div class="stat-group">
                     <h3>Thống kê sinh viên</h3>
-                    <p>Tổng số SV: <strong th:text="${studentTotal}">1000</strong></p>
-                    <p>SV chờ lớp: <strong th:text="${studentWaiting}">200</strong></p>
-                    <p>SV đang học: <strong th:text="${studentStudying}">600</strong></p>
-                    <p>SV bảo lưu/đình chỉ: <strong th:text="${studentSuspended}">50</strong></p>
-                    <p>SV tốt nghiệp: <strong th:text="${studentGraduated}">150</strong></p>
+                    <p>Tổng số SV: <strong th:text="${studentTotal}">0</strong></p>
+                    <p>SV chờ lớp: <strong th:text="${studentWaiting}">0</strong></p>
+                    <p>SV đang học: <strong th:text="${studentStudying}">0</strong></p>
+                    <p>SV bảo lưu: <strong th:text="${studentSuspended}">0</strong></p>
+                    <p>SV đình chỉ: <strong th:text="${studentSuspended}">0</strong></p>
+                    <p>SV tốt nghiệp: <strong th:text="${studentGraduated}">0</strong></p>
                 </div>
             </div>
         </section>
