--- a/src/main/resources/static/css/Index.css
+++ b/src/main/resources/static/css/Index.css
@@ -243,14 +243,18 @@ header {
     border-color: var(--main-blue);
 }
 
-.actions button {
+.actions button,
+.actions a {
+    display: inline-block;
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-weight: 500;
+    font-weight: 540;
+    line-height: 1.5;
     font-size: 0.9rem;
     transition: all 0.3s ease;
+    text-decoration: none;
 }
 
 .add-button {
